--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="./video21.js"></script>
+<script src="./video21/video22.js"></script>
 <body>
     <h1>Hello world from HTML</h1>
 </body>
